--- a/index.html
+++ b/index.html
@@ -1,70 +1,55 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="hi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Meme Uploader</title>
-  <style>
-    body { font-family: sans-serif; margin: 20px; background: #f4f4f4; }
-    h1 { text-align: center; }
-    form { margin-bottom: 20px; background: white; padding: 20px; border-radius: 10px; }
-    input[type="text"], input[type="file"] {
-      display: block;
-      margin: 10px 0;
-      width: 100%;
-      padding: 10px;
-    }
-    button {
-      padding: 10px 20px;
-      background: #333;
-      color: white;
-      border: none;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-    .meme-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      gap: 20px;
-    }
-    .meme {
-      background: white;
-      padding: 10px;
-      border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    }
-    .meme img {
-      max-width: 100%;
-      border-radius: 8px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>World Education Hub</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Meme Uploader</h1>
-  <form id="memeForm">
-    <input type="text" id="caption" placeholder="Enter caption" required />
-    <input type="file" id="image" accept="image/*" required />
-    <button type="submit">Upload Meme</button>
-  </form>
-  <div class="meme-grid" id="memeGrid"></div>  <script>
-    const memeForm = document.getElementById('memeForm');
-    const memeGrid = document.getElementById('memeGrid');
+    <header>
+        <nav>
+            <div class="logo">World Education Hub</div>
+            <ul>
+                <li><a href="#home">होम</a></li>
+                <li><a href="#countries">देश</a></li>
+                <li><a href="#about">हमारे बारे में</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    memeForm.addEventListener('submit', (e) => {
-      e.preventDefault();
-      const caption = document.getElementById('caption').value;
-      const imageFile = document.getElementById('image').files[0];
+    <section id="home">
+        <h1>विश्व की शिक्षा के बारे में जानें</h1>
+        <p>यह वेबसाइट विश्व भर के शिक्षा तंत्र, आंकड़े, और महत्वपूर्ण जानकारी प्रदान करती है।</p>
+    </section>
 
-      if (imageFile) {
-        const reader = new FileReader();
-        reader.onload = function(e) {
-          const memeDiv = document.createElement('div');
-          memeDiv.className = 'meme';
-          memeDiv.innerHTML = `<img src="${e.target.result}" alt="Meme"><p>${caption}</p>`;
-          memeGrid.prepend(memeDiv);
-          memeForm.reset();
-        }
-        reader.readAsDataURL(imageFile);
-      }
-    });
-  </script></body>
+    <section id="countries">
+        <h2>देशों के आधार पर शिक्षा</h2>
+        <div class="country-list">
+            <div class="country-card">
+                <h3>भारत</h3>
+                <p>भारत में प्राथमिक से उच्च शिक्षा तक कई संस्थान हैं। IIT और IIM जैसे संस्थान विश्व प्रसिद्ध हैं।</p>
+            </div>
+            <div class="country-card">
+                <h3>संयुक्त राज्य अमेरिका</h3>
+                <p>अमेरिका में हार्वर्ड, MIT जैसे विश्वविद्यालय और मजबूत स्कूल सिस्टम है।</p>
+            </div>
+            <div class="country-card">
+                <h3>जापान</h3>
+                <p>जापान का शिक्षा तंत्र तकनीकी और अनुशासित शिक्षण के लिए जाना जाता है।</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="about">
+        <h2>हमारे बारे में</h2>
+        <p>यह वेबसाइट शिक्षा के प्रति जागरूकता बढ़ाने के लिए बनाई गई है। भविष्य में हम और डेटा और इंटरैक्टिव फीचर्स जोड़ेंगे।</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 World Education Hub. सभी अधिकार सुरक्षित।</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
 </html>
