--- a/index.html
+++ b/index.html
@@ -3,53 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Education Hub</title>
+    <title>Knowledge of Humanity</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">World Education Hub</div>
+            <div class="logo">Knowledge of Humanity</div>
+            <div class="search-bar">
+                <input type="text" id="searchInput" placeholder="जानकारी खोजें...">
+                <button onclick="searchKnowledge()">खोजें</button>
+            </div>
             <ul>
                 <li><a href="#home">होम</a></li>
-                <li><a href="#countries">देश</a></li>
+                <li><a href="#categories">श्रेणियाँ</a></li>
+                <li><a href="#stats">आंकड़े</a></li>
                 <li><a href="#about">हमारे बारे में</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="home">
-        <h1>विश्व की शिक्षा के बारे में जानें</h1>
-        <p>यह वेबसाइट विश्व भर के शिक्षा तंत्र, आंकड़े, और महत्वपूर्ण जानकारी प्रदान करती है।</p>
+        <h1>मानवता का संपूर्ण ज्ञान</h1>
+        <p>यह वेबसाइट मानव इतिहास में प्राप्त शिक्षा, विज्ञान, और संस्कृति की जानकारी को एक जगह लाती है।</p>
     </section>
 
-    <section id="countries">
-        <h2>देशों के आधार पर शिक्षा</h2>
-        <div class="country-list">
-            <div class="country-card">
-                <h3>भारत</h3>
-                <p>भारत में प्राथमिक से उच्च शिक्षा तक कई संस्थान हैं। IIT और IIM जैसे संस्थान विश्व प्रसिद्ध हैं।</p>
+    <section id="categories">
+        <h2>ज्ञान की श्रेणियाँ</h2>
+        <div class="category-list">
+            <div class="category-card">
+                <h3>विज्ञान</h3>
+                <p>भौतिकी, रसायन विज्ञान, और जीव विज्ञान में मानव की खोजें। उदाहरण: न्यूटन के नियम, डीएनए की खोज।</p>
             </div>
-            <div class="country-card">
-                <h3>संयुक्त राज्य अमेरिका</h3>
-                <p>अमेरिका में हार्वर्ड, MIT जैसे विश्वविद्यालय और मजबूत स्कूल सिस्टम है।</p>
+            <div class="category-card">
+                <h3>इतिहास</h3>
+                <p>प्राचीन सभ्यताओं से आधुनिक युग तक। उदाहरण: मेसोपोटामिया, स्वतंत्रता संग्राम।</p>
             </div>
-            <div class="country-card">
-                <h3>जापान</h3>
-                <p>जापान का शिक्षा तंत्र तकनीकी और अनुशासित शिक्षण के लिए जाना जाता है।</p>
+            <div class="category-card">
+                <h3>कला और संस्कृति</h3>
+                <p>साहित्य, संगीत, और चित्रकला। उदाहरण: शेक्सपियर, भारतीय शास्त्रीय नृत्य।</p>
             </div>
+        </div>
+    </section>
+
+    <section id="stats">
+        <h2>शिक्षा के आंकड़े</h2>
+        <div class="chart-container">
+            <canvas id="educationChart"></canvas>
         </div>
     </section>
 
     <section id="about">
         <h2>हमारे बारे में</h2>
-        <p>यह वेबसाइट शिक्षा के प्रति जागरूकता बढ़ाने के लिए बनाई गई है। भविष्य में हम और डेटा और इंटरैक्टिव फीचर्स जोड़ेंगे।</p>
+        <p>यह वेबसाइट मानव ज्ञान को संरक्षित और साझा करने के लिए बनाई गई है। हमारा लक्ष्य शिक्षा को सभी के लिए सुलभ बनाना है।</p>
     </section>
 
     <footer>
-        <p>&copy; 2025 World Education Hub. सभी अधिकार सुरक्षित।</p>
+        <p>© 2025 Knowledge of Humanity. सभी अधिकार सुरक्षित।</p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
