--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <div class="logo">Knowledge of Humanity</div>
             <div class="search-bar">
                 <input type="text" id="searchInput" placeholder="जानकारी खोजें...">
-                <button onclick="searchKnowledge()">खोजें</button>
+                <button onclick="searchKnowledge()">search</button>
             </div>
             <ul>
-                <li><a href="#home">होम</a></li>
+                <li><a href="#home">home</a></li>
                 <li><a href="#categories">श्रेणियाँ</a></li>
                 <li><a href="#stats">आंकड़े</a></li>
                 <li><a href="#about">हमारे बारे में</a></li>
