--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="hi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,55 +11,59 @@
         <nav>
             <div class="logo">Knowledge of Humanity</div>
             <div class="search-bar">
-                <input type="text" id="searchInput" placeholder="जानकारी खोजें...">
-                <button onclick="searchKnowledge()">search</button>
+                <input type="text" id="searchInput" placeholder="Search for information...">
+                <button onclick="searchKnowledge()">Search</button>
             </div>
             <ul>
-                <li><a href="#home">home</a></li>
-                <li><a href="#categories">श्रेणियाँ</a></li>
-                <li><a href="#stats">आंकड़े</a></li>
-                <li><a href="#about">हमारे बारे में</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#categories">Categories</a></li>
+                <li><a href="#stats">Statistics</a></li>
+                <li><a href="#about">About Us</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="home">
-        <h1>मानवता का संपूर्ण ज्ञान</h1>
-        <p>यह वेबसाइट मानव इतिहास में प्राप्त शिक्षा, विज्ञान, और संस्कृति की जानकारी को एक जगह लाती है।</p>
+        <h1>Complete Knowledge of Humanity</h1>
+        <p>This website brings together information on education, science, and culture from human history.</p>
     </section>
 
     <section id="categories">
-        <h2>ज्ञान की श्रेणियाँ</h2>
+        <h2>Knowledge Categories</h2>
         <div class="category-list">
             <div class="category-card">
-                <h3>विज्ञान</h3>
-                <p>भौतिकी, रसायन विज्ञान, और जीव विज्ञान में मानव की खोजें। उदाहरण: न्यूटन के नियम, डीएनए की खोज।</p>
+                <h3>Science</h3>
+                <p>Discoveries in physics, chemistry, and biology. Examples: Newton's laws, DNA discovery.</p>
             </div>
             <div class="category-card">
-                <h3>इतिहास</h3>
-                <p>प्राचीन सभ्यताओं से आधुनिक युग तक। उदाहरण: मेसोपोटामिया, स्वतंत्रता संग्राम।</p>
+                <h3>History</h3>
+                <p>From ancient civilizations to the modern era. Examples: Mesopotamia, independence movements.</p>
             </div>
             <div class="category-card">
-                <h3>कला और संस्कृति</h3>
-                <p>साहित्य, संगीत, और चित्रकला। उदाहरण: शेक्सपियर, भारतीय शास्त्रीय नृत्य।</p>
+                <h3>Art and Culture</h3>
+                <p>Literature, music, and painting. Examples: Shakespeare, Indian classical dance.</p>
+            </div>
+            <div class="category-card">
+                <h3>Countries</h3>
+                <p>Explore information about countries worldwide, including population, capital, and culture.</p>
             </div>
         </div>
     </section>
 
     <section id="stats">
-        <h2>शिक्षा के आंकड़े</h2>
+        <h2>Global Statistics</h2>
         <div class="chart-container">
             <canvas id="educationChart"></canvas>
         </div>
     </section>
 
     <section id="about">
-        <h2>हमारे बारे में</h2>
-        <p>यह वेबसाइट मानव ज्ञान को संरक्षित और साझा करने के लिए बनाई गई है। हमारा लक्ष्य शिक्षा को सभी के लिए सुलभ बनाना है।</p>
+        <h2>About Us</h2>
+        <p>This website is created to preserve and share human knowledge. Our goal is to make education accessible to everyone.</p>
     </section>
 
     <footer>
-        <p>© 2025 Knowledge of Humanity. सभी अधिकार सुरक्षित।</p>
+        <p>© 2025 Knowledge of Humanity. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
