--- a/index.html
+++ b/index.html
@@ -1,72 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knowledge of Humanity</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Awesome Website</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">Knowledge of Humanity</div>
-            <div class="search-bar">
-                <input type="text" id="searchInput" placeholder="Search for information...">
-                <button onclick="searchKnowledge()">Search</button>
-            </div>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#categories">Categories</a></li>
-                <li><a href="#stats">Statistics</a></li>
-                <li><a href="#about">About Us</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <section id="home">
-        <h1>Complete Knowledge of Humanity</h1>
-        <p>This website brings together information on education, science, and culture from human history.</p>
-    </section>
+  <header>
+    <nav class="navbar">
+      <div class="logo">MySite</div>
+      <ul class="nav-links">
+        <li><a href="#home" class="active">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section id="categories">
-        <h2>Knowledge Categories</h2>
-        <div class="category-list">
-            <div class="category-card">
-                <h3>Science</h3>
-                <p>Discoveries in physics, chemistry, and biology. Examples: Newton's laws, DNA discovery.</p>
-            </div>
-            <div class="category-card">
-                <h3>History</h3>
-                <p>From ancient civilizations to the modern era. Examples: Mesopotamia, independence movements.</p>
-            </div>
-            <div class="category-card">
-                <h3>Art and Culture</h3>
-                <p>Literature, music, and painting. Examples: Shakespeare, Indian classical dance.</p>
-            </div>
-            <div class="category-card">
-                <h3>Countries</h3>
-                <p>Explore information about countries worldwide, including population, capital, and culture.</p>
-            </div>
-        </div>
-    </section>
+  <section id="home" class="hero-section">
+    <div class="hero-text">
+      <h1>Welcome to My Awesome Website</h1>
+      <p>Best UI, modern design, fully responsive.</p>
+      <a href="#services" class="btn-primary">Explore Services</a>
+    </div>
+  </section>
 
-    <section id="stats">
-        <h2>Global Statistics</h2>
-        <div class="chart-container">
-            <canvas id="educationChart"></canvas>
-        </div>
-    </section>
+  <section id="about" class="section">
+    <h2>About Us</h2>
+    <p>We create stunning websites with great user experience.</p>
+  </section>
 
-    <section id="about">
-        <h2>About Us</h2>
-        <p>This website is created to preserve and share human knowledge. Our goal is to make education accessible to everyone.</p>
-    </section>
+  <section id="services" class="section">
+    <h2>Our Services</h2>
+    <div class="services-grid">
+      <div class="service-card">
+        <h3>Web Design</h3>
+        <p>Modern and responsive website designs.</p>
+      </div>
+      <div class="service-card">
+        <h3>Development</h3>
+        <p>Fast and secure web development solutions.</p>
+      </div>
+      <div class="service-card">
+        <h3>SEO</h3>
+        <p>Boost your website ranking on search engines.</p>
+      </div>
+    </div>
+  </section>
 
-    <footer>
-        <p>© 2025 Knowledge of Humanity. All rights reserved.</p>
-    </footer>
+  <section id="contact" class="section">
+    <h2>Contact Us</h2>
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea placeholder="Your Message" rows="5" required></textarea>
+      <button type="submit" class="btn-primary">Send Message</button>
+    </form>
+  </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
+  <footer>
+    <p>© 2025 My Awesome Website. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
