--- a/index.html
+++ b/index.html
@@ -1,176 +1,74 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Scolo AI</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-    }body, html {
-  height: 100%;
-  font-family: 'Inter', sans-serif;
-  color: white;
-  overflow-x: hidden;
-  background-color: #0e0e11;
-}
-
-header {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  padding: 20px 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.logo-container {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-
-.logo-container img {
-  height: 40px;
-}
-
-.logo-text {
-  font-size: 1.8rem;
-  font-weight: 800;
-  background: linear-gradient(90deg, #8f00ff, #00b7ff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 30px;
-}
-
-nav a {
-  color: #ddd;
-  text-decoration: none;
-  font-weight: 600;
-  transition: color 0.3s;
-}
-
-nav a:hover {
-  color: white;
-}
-
-.hero {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  z-index: 5;
-  padding: 0 20px;
-}
-
-.video-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  z-index: 0;
-  filter: brightness(0.4);
-}
-
-.hero-content {
-  z-index: 2;
-}
-
-.hero h1 {
-  font-size: 3rem;
-  font-weight: 800;
-  background: linear-gradient(90deg, #8f00ff, #00b7ff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.hero p {
-  max-width: 600px;
-  margin: 20px auto;
-  font-size: 1.2rem;
-  color: #ccc;
-}
-
-.hero .btn {
-  background: linear-gradient(to right, #8f00ff, #00b7ff);
-  color: white;
-  padding: 14px 30px;
-  border: none;
-  border-radius: 30px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.hero .btn:hover {
-  opacity: 0.85;
-}
-
-footer {
-  text-align: center;
-  padding: 20px;
-  font-size: 0.9rem;
-  color: #777;
-  background: #0e0e11;
-}
-
-@media(max-width: 768px) {
-  .hero h1 {
-    font-size: 2rem;
-  }
-
-  nav ul {
-    flex-direction: column;
-    gap: 15px;
-    background: rgba(0,0,0,0.8);
-    padding: 10px;
-    border-radius: 10px;
-  }
-}
-
+    }
+    body, html {
+      height: 100%;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+    }
+    #bg-video {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: -1;
+      object-fit: cover;
+    }
+    .content {
+      position: relative;
+      z-index: 1;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      text-shadow: 0px 0px 10px black;
+      padding: 20px;
+      text-align: center;
+    }
+    .logo {
+      width: 120px;
+      height: auto;
+      margin-bottom: 20px;
+    }
+    h1 {
+      font-size: 3em;
+    }
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2em;
+      }
+      .logo {
+        width: 90px;
+      }
+    }
   </style>
 </head>
 <body>
-  <header>
-    <div class="logo-container">
-      <img src="logo.png" alt="Scolo AI Logo">
-      <div class="logo-text">Scolo AI</div>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>  <section class="hero">
-    <video class="video-bg" autoplay muted loop>
-      <source src="https://cdn.coverr.co/videos/coverr-ai-chip-technology-2962/1080p.mp4" type="video/mp4">
-    </video>
-    <div class="hero-content">
-      <h1>Power Automotive AI With Your Data</h1>
-      <p>Unlock intelligence for your enterprise by harnessing the full potential of AI and structured data at scale.</p>
-      <button class="btn">Get Started</button>
-    </div>
-  </section>  <footer>
-    <p>&copy; 2025 Scolo AI. All rights reserved.</p>
-  </footer>
+
+  <!-- 🎥 Video Background -->
+  <video autoplay muted loop playsinline id="bg-video">
+    <source src="bg-video.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+
+  <!-- 🔗 Content Overlay -->
+  <div class="content">
+    <img src="logo.png" alt="Scolo AI Logo" class="logo" />
+    <h1>Welcome to Scolo AI</h1>
+    <p>Powering Intelligence with Style.</p>
+  </div>
+
 </body>
 </html>
