--- a/index.html
+++ b/index.html
@@ -1,80 +1,200 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Scolo AI</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI Data Engine</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-    }
+    }body {
+  font-family: 'Inter', sans-serif;
+  background-color: #0e0e11;
+  color: #ffffff;
+  line-height: 1.6;
+  overflow-x: hidden;
+}
 
-    body, html {
-      height: 100%;
-      font-family: Arial, sans-serif;
-      overflow: hidden;
-    }
+header {
+  padding: 20px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #0e0e11;
+}
 
-    #bg-video {
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      min-width: 100%;
-      min-height: 100%;
-      z-index: -1;
-      object-fit: cover;
-    }
+.logo {
+  font-size: 1.6rem;
+  font-weight: 800;
+  color: #ffffff;
+}
 
-    .content {
-      position: relative;
-      z-index: 1;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      text-shadow: 0px 0px 10px black;
-      padding: 20px;
-      text-align: center;
-    }
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 30px;
+}
 
-    .logo {
-      width: 120px;
-      height: auto;
-      margin-bottom: 20px;
-    }
+nav a {
+  color: #ccc;
+  text-decoration: none;
+  font-weight: 600;
+  transition: color 0.3s;
+}
 
-    h1 {
-      font-size: 3em;
-    }
+nav a:hover {
+  color: #ffffff;
+}
 
-    @media (max-width: 768px) {
-      h1 {
-        font-size: 2em;
-      }
-      .logo {
-        width: 90px;
-      }
-    }
+.hero {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0 20px;
+  background: radial-gradient(ellipse at center, #181820 0%, #0e0e11 100%);
+}
+
+.hero h1 {
+  font-size: 3rem;
+  font-weight: 800;
+  background: linear-gradient(90deg, #8f00ff, #00b7ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.hero p {
+  max-width: 600px;
+  margin: 20px 0;
+  font-size: 1.2rem;
+  color: #bbb;
+}
+
+.hero .btn {
+  background: linear-gradient(to right, #8f00ff, #00b7ff);
+  color: white;
+  padding: 14px 30px;
+  border: none;
+  border-radius: 30px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: opacity 0.3s;
+  margin-top: 20px;
+}
+
+.hero .btn:hover {
+  opacity: 0.85;
+}
+
+footer {
+  text-align: center;
+  padding: 20px;
+  font-size: 0.9rem;
+  color: #777;
+}
+
+@media(max-width: 768px) {
+  .hero h1 {
+    font-size: 2rem;
+  }
+
+  nav ul {
+    flex-direction: column;
+    gap: 15px;
+    text-align: right;
+  }
+}
+
   </style>
+</head>
+<body>  <header>
+    <div class="logo">scolo</div>
+    <nav>
+      <ul>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Solutions</a></li>
+        <li><a href="#">Customers</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>  <section class="hero">
+    <h1>Power <span style="color:#00b7ff">Automotive AI</span><br>With Your Data</h1>
+    <p>Make the best models with the best data. Unlock AI’s true value with enterprise-grade solutions built for scale.</p>
+    <button class="btn">Book a Demo</button>
+  </section>  <footer>
+    <p>&copy; 2025 Scolo AI. All rights reserved.</p>
+  </footer></body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Awesome Website</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
 </head>
 <body>
 
-  <!-- 🎥 Video Background -->
-  <video autoplay muted loop playsinline id="bg-video">
-    <source src="bg-video.mp4" type="video/mp4" />
-    Your browser does not support the video tag.
-  </video>
+  <header>
+    <nav class="navbar">
+      <div class="logo">MySite</div>
+      <ul class="nav-links">
+        <li><a href="#home" class="active">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <!-- 🔗 Content Overlay -->
-  <div class="content">
-    <img src="logo.png" alt="Scolo AI Logo" class="logo" />
-    <h1>Welcome to Scolo AI</h1>
-    <p>Powering Intelligence with Style.</p>
-  </div>
+  <section id="home" class="hero-section">
+    <div class="hero-text">
+      <h1>Welcome to My Awesome Website</h1>
+      <p>Best UI, modern design, fully responsive.</p>
+      <a href="#services" class="btn-primary">Explore Services</a>
+    </div>
+  </section>
+
+  <section id="about" class="section">
+    <h2>About Us</h2>
+    <p>We create stunning websites with great user experience.</p>
+  </section>
+
+  <section id="services" class="section">
+    <h2>Our Services</h2>
+    <div class="services-grid">
+      <div class="service-card">
+        <h3>Web Design</h3>
+        <p>Modern and responsive website designs.</p>
+      </div>
+      <div class="service-card">
+        <h3>Development</h3>
+        <p>Fast and secure web development solutions.</p>
+      </div>
+      <div class="service-card">
+        <h3>SEO</h3>
+        <p>Boost your website ranking on search engines.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="section">
+    <h2>Contact Us</h2>
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea placeholder="Your Message" rows="5" required></textarea>
+      <button type="submit" class="btn-primary">Send Message</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>© 2025 My Awesome Website. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
