--- a/index.html
+++ b/index.html
@@ -2,33 +2,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Data Engine</title>
+  <title>Scolo AI</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-    }body {
+    }body, html {
+  height: 100%;
   font-family: 'Inter', sans-serif;
-  background-color: #0e0e11;
-  color: #ffffff;
-  line-height: 1.6;
+  color: white;
   overflow-x: hidden;
+  background-color: #0e0e11;
 }
 
 header {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 10;
   padding: 20px 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #0e0e11;
+  background: rgba(0, 0, 0, 0.5);
 }
 
-.logo {
-  font-size: 1.6rem;
+.logo-container {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.logo-container img {
+  height: 40px;
+}
+
+.logo-text {
+  font-size: 1.8rem;
   font-weight: 800;
-  color: #ffffff;
+  background: linear-gradient(90deg, #8f00ff, #00b7ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 nav ul {
@@ -38,25 +55,41 @@ nav ul {
 }
 
 nav a {
-  color: #ccc;
+  color: #ddd;
   text-decoration: none;
   font-weight: 600;
   transition: color 0.3s;
 }
 
 nav a:hover {
-  color: #ffffff;
+  color: white;
 }
 
 .hero {
+  position: relative;
+  width: 100%;
   height: 100vh;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   text-align: center;
+  z-index: 5;
   padding: 0 20px;
-  background: radial-gradient(ellipse at center, #181820 0%, #0e0e11 100%);
+}
+
+.video-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  z-index: 0;
+  filter: brightness(0.4);
+}
+
+.hero-content {
+  z-index: 2;
 }
 
 .hero h1 {
@@ -69,9 +102,9 @@ nav a:hover {
 
 .hero p {
   max-width: 600px;
-  margin: 20px 0;
+  margin: 20px auto;
   font-size: 1.2rem;
-  color: #bbb;
+  color: #ccc;
 }
 
 .hero .btn {
@@ -82,8 +115,7 @@ nav a:hover {
   border-radius: 30px;
   font-size: 1rem;
   cursor: pointer;
-  transition: opacity 0.3s;
-  margin-top: 20px;
+  transition: 0.3s;
 }
 
 .hero .btn:hover {
@@ -95,6 +127,7 @@ footer {
   padding: 20px;
   font-size: 0.9rem;
   color: #777;
+  background: #0e0e11;
 }
 
 @media(max-width: 768px) {
@@ -105,96 +138,39 @@ footer {
   nav ul {
     flex-direction: column;
     gap: 15px;
-    text-align: right;
+    background: rgba(0,0,0,0.8);
+    padding: 10px;
+    border-radius: 10px;
   }
 }
 
   </style>
 </head>
-<body>  <header>
-    <div class="logo">scolo</div>
+<body>
+  <header>
+    <div class="logo-container">
+      <img src="logo.png" alt="Scolo AI Logo">
+      <div class="logo-text">Scolo AI</div>
+    </div>
     <nav>
       <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
         <li><a href="#">Products</a></li>
-        <li><a href="#">Solutions</a></li>
-        <li><a href="#">Customers</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </header>  <section class="hero">
-    <h1>Power <span style="color:#00b7ff">Automotive AI</span><br>With Your Data</h1>
-    <p>Make the best models with the best data. Unlock AI’s true value with enterprise-grade solutions built for scale.</p>
-    <button class="btn">Book a Demo</button>
+    <video class="video-bg" autoplay muted loop>
+      <source src="https://cdn.coverr.co/videos/coverr-ai-chip-technology-2962/1080p.mp4" type="video/mp4">
+    </video>
+    <div class="hero-content">
+      <h1>Power Automotive AI With Your Data</h1>
+      <p>Unlock intelligence for your enterprise by harnessing the full potential of AI and structured data at scale.</p>
+      <button class="btn">Get Started</button>
+    </div>
   </section>  <footer>
     <p>&copy; 2025 Scolo AI. All rights reserved.</p>
-  </footer></body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Awesome Website</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
-</head>
-<body>
-
-  <header>
-    <nav class="navbar">
-      <div class="logo">MySite</div>
-      <ul class="nav-links">
-        <li><a href="#home" class="active">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section id="home" class="hero-section">
-    <div class="hero-text">
-      <h1>Welcome to My Awesome Website</h1>
-      <p>Best UI, modern design, fully responsive.</p>
-      <a href="#services" class="btn-primary">Explore Services</a>
-    </div>
-  </section>
-
-  <section id="about" class="section">
-    <h2>About Us</h2>
-    <p>We create stunning websites with great user experience.</p>
-  </section>
-
-  <section id="services" class="section">
-    <h2>Our Services</h2>
-    <div class="services-grid">
-      <div class="service-card">
-        <h3>Web Design</h3>
-        <p>Modern and responsive website designs.</p>
-      </div>
-      <div class="service-card">
-        <h3>Development</h3>
-        <p>Fast and secure web development solutions.</p>
-      </div>
-      <div class="service-card">
-        <h3>SEO</h3>
-        <p>Boost your website ranking on search engines.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="contact" class="section">
-    <h2>Contact Us</h2>
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit" class="btn-primary">Send Message</button>
-    </form>
-  </section>
-
-  <footer>
-    <p>© 2025 My Awesome Website. All rights reserved.</p>
   </footer>
-
 </body>
 </html>
